# systaintable

./: .gitignore  README.md  build-tools.sh
.devcontainer/: Dockerfile  devcontainer.json
classifier/: Cargo.toml  Dockerfile.lambda  README.md  build_lambda.sh  classifier_spec.txt
classifier/src/: lib.rs  main.rs  mcp_server.rs
classifier/src/patterns/: address.rs  dnsname.rs  email.rs  guid.rs  ip.rs  mac.rs  mod.rs  phonenumber.rs  pid.rs  realname.rs  time.rs  tty.rs  uid.rs  url.rs  username.rs
classifier/src/patterns/extraction/: address.rs  dnsname.rs  email.rs  ip.rs  mac.rs  mod.rs  phonenumber.rs  pid.rs  time.rs  tty.rs  url.rs  username.rs
classifier/tests/: test_patterns.rs
corpusdownloader/: README.md  corpusdownloader_spec.txt
corpusdownloader/src/: corpusdownloader.py
idpairer/: Cargo.toml  README.md  main.rs  spec.txt
idtrace/: Cargo.toml  README.md
idtrace/src/: main.rs
jsonforms-app/src/: app.tsx
lense/: README.md
logbook/: README.md  index.html  package.json  research_material_logbook_spec.txt  template.json  tsconfig.json  webpack.config.js
logbook/public/: index.html
logbook/src/: App.tsx
logtokenizer/: jsontokeniser.py  tokenjsoniser.py  vector-matches-example-from-gemini.py  vectors_to_rules.py
mermetro/: .gitignore  README.md  common_values.txt  lokitiedosto.json  mermetro.py  metrokartta.py  requirements.txt  start.py
mermetro/data/: README.md  excluded_values.txt
mermetro/v1/: README.md  (+1 more)
mermetro2/: .gitignore  README.md  formation.py  mermetro2.py  nodes.py
value-to-id/: value_to_id_classifier_spec.txt
(+20 files in other folders)
