[package]
name = "regex-classifier"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "regex-classifier"
path = "src/main.rs"

[[bin]]
name = "mcp_server"
path = "src/bin/mcp_server.rs"

[[bin]]
name = "mcp_http_server"
path = "src/bin/mcp_http_server.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
lazy_static = "1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
indicatif = "0.17"
warp = "0.3"